# atparlpy

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
atparlpy/: __init__.py  _filter_api.py  _record.py  details.py  inquiries.py  parliamentarians.py  plenary_sessions.py  resolutions.py
atparlpy/committee_reports/: __init__.py  committee_reports.py
atparlpy/motions/: __init__.py  motions.py
examples/: examples.py
tests/: tests.py
