[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "atparlpy"
version = "0.1.0"
description = "Python wrapper for the Austrian Parliament open data API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["atparlpy*"]

[project.optional-dependencies]
test = [
    "pytest"
]